Create style for section 2 of landing

--- a/index.html
+++ b/index.html
@@ -29,23 +29,31 @@
                 <img src="/media/profile.img" alt="profile image">
             </div>
             <div class="section-2">
-                <h2><strong>Some random information</strong></h2>
+                <h2>Some random information</h2>
                 <div class="subsection">
                     <div class="box">
                         <div class="blue-box"></div>
-                        <p>This is some subtext under an illustration or image</p>
+                        <div class="text">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
                     </div>
                     <div class="box">
                         <div class="blue-box"></div>
-                        <p>This is some subtext under an illustration or image</p>
+                        <div class="text">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
                     </div>
                     <div class="box">
                         <div class="blue-box"></div>
-                        <p>This is some subtext under an illustration or image</p>
+                        <div class="text">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
                     </div>
                     <div class="box">
                         <div class="blue-box"></div>
-                        <p>This is some subtext under an illustration or image</p>
+                        <div class="text">
+                            <p>This is some subtext under an illustration or image</p>
+                        </div>
                     </div>
                 </div>
             </div>
