--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 </div>
             </div>
             <div class="section-3">
-                <h2>This is an inspiring quote, or a testimonial from a customer.
-                    maybe it's just filling up space, or maybe people will actually read it.
+                <p class="quote">This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually read it.
                     Who knows? All i Know is that it looks nice.
-                </h2>
-                <p><strong>- Thor,God of Thunder</strong></p>
+                </p>
+                <p class="author">- Thor, God of Thunder</p>
             </div>
             <div class="section-4">
                 <div class="signup-box">
