--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="section-4">
                 <div class="signup-box">
-                    <div>
+                    <div class="text">
                         <h4>Call to action! It's time!</h4>
                         <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
