--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h4>Call to action! It's time!</h4>
                         <p>Sign up for our product by clicking that button right over there!</p>
                     </div>
-                    <button>Sign up</button>
+                    <div class="button"><button>Sign up</button></div>
                 </div>
             </div>
         </div>
